--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,10 @@ supabase-kt-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt"
 supabase-kt-storage = { module = "io.github.jan-tennert.supabase:storage-kt", version.ref = "supabase" }
 supabase-kt-realtime = { module = "io.github.jan-tennert.supabase:realtime-kt", version.ref = "supabase" } # Optional
 
+compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "compose-plugin" }
+compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-plugin" }
+
+
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
