--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,7 +29,13 @@ googleGmsGoogleServices = "4.4.2"
 multiplatformSettings = "1.3.0"
 supabase = "2.5.0"
 
+mokoMvvm = "0.16.1"
+
 [libraries]
+moko-mvvm-core = { module = "dev.icerock.moko:mvvm-core", version.ref = "mokoMvvm" }
+moko-mvvm-compose = { module = "dev.icerock.moko:mvvm-compose", version.ref = "mokoMvvm" }
+
+
 supabase-kt-gotrue = { module = "io.github.jan-tennert.supabase:gotrue-kt", version.ref = "supabase" }
 supabase-kt-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase" }
 supabase-kt-storage = { module = "io.github.jan-tennert.supabase:storage-kt", version.ref = "supabase" }
