Refactor: Remove iOS and update dependencies
This commit removes the iOS-specific project files and configurations. It also includes updates to Gradle wrapper version and various library dependencies.

Key changes:
- Removed the entire `iosApp` directory, including Xcode project files, Swift source files, and asset catalogs.
- Updated `PRODUCT_BUNDLE_IDENTIFIER` in `iosApp/Configuration/Config.xcconfig` to include `$(TEAM_ID)`. (Note: This file was subsequently removed).
- Removed various libraries from `gradle/libs.versions.toml`, including Moko MVVM, Supabase Realtime, and several AndroidX and testing libraries.
- Updated the Gradle wrapper version from 8.9 to 8.11.1 in `gradle/wrapper/gradle-wrapper.properties`.
- Modified `AppViewModel.adminCreateUser` to accept an `isAdmin` boolean parameter.
- Updated `CreateUserDialog` in `FolderContentScreen.kt`:
    - The `onConfirm` lambda now includes an `isAdmin` boolean.
    - Added RadioButtons for selecting user role (Regular User/Admin).
    - Dialog is now closed upon confirming user creation.
- Removed `ktor.client.darwin` dependency from `nativeMain` in `composeApp/build.gradle.kts`.
- Commented out the experimental web application configuration in `composeApp/build.gradle.kts`.

--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
 PRODUCT_NAME=DocSaver
-PRODUCT_BUNDLE_IDENTIFIER=uz.mobiledv.test1.DocSaver
+PRODUCT_BUNDLE_IDENTIFIER=uz.mobiledv.test1.DocSaver$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
