--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,6 @@
-TEAM_ID=
 
 PRODUCT_NAME=DocSaver
-PRODUCT_BUNDLE_IDENTIFIER=uz.mobiledv.test1.DocSaver$(TEAM_ID)
+PRODUCT_BUNDLE_IDENTIFIER=uz.mobiledv.test1.DocSaver
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
